tests/src/frontend/typechecking/invalid/class_extend.sk
class X()
class Y extends X
